Fix: Separated Arena from worm.
Signed-off-by: Psikuvit <thegengestar@gmail.com>